--- a/src/admin-bundle/shared/ui/AdminImageUploader/admin-image-uploader.module.scss
+++ b/src/admin-bundle/shared/ui/AdminImageUploader/admin-image-uploader.module.scss
@@ -32,6 +32,44 @@
   width: 100%;
   height: 100%;
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .carousel {
+    display: flex;
+    align-items: center;
+
+    .arrowLeft, .arrowRight {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%) !important;
+      color: white;
+      font-size: 14px;
+      border-radius: 50%;
+      width: 42px;
+      height: 42px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      z-index: 10;
+    }
+
+    .arrowLeft {
+      left: 10px;
+    }
+
+    .arrowRight {
+      right: 10px;
+    }
+
+    .carouselItem {
+      height: 100%;
+      display: flex;
+      align-items: center;
+    };
+  }
 
   .previewImage {
     width: 100%;
@@ -42,8 +80,8 @@
 
   .deleteButton {
     position: absolute;
-    top: -15px;
-    right: -15px;
+    top: 20px;
+    right: 20px;
     z-index: 1;
     width: 30px;
     height: 30px;
